@@ -1,7 +1,13 @@
+2002-04-30  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Erase so_locations
+	files.  Fix subobj9.test on OSF and IRIX.
+	Reported by Nelson H. F. Beebe.
+
 2002-04-26  Tom Tromey  <tromey@redhat.com>
 
 	* lib/am/dejagnu.am (distclean-DEJAGNU): New target.
-	For Debian bug 14421.
+	For Debian bug 144221.
 
 2002-04-26  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
